<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.teddylear.blogapp.Fragments.StartMenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/startMenuHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/start_menu_header" />

    <Button
        android:id="@+id/startRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_menu_register_button" />

    <Button
        android:id="@+id/startLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_menu_login_button" />

    <Button
        android:id="@+id/startMenuExitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_button" />


</LinearLayout>
